<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="13dp"
    android:paddingBottom="13dp"
    android:paddingLeft="9dp"
    android:paddingRight="9dp"
    android:background="#e0e0e0">

    <RadioGroup
        android:id="@+id/rg_brain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rt_brain1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            style="@style/fragment_header_center"
            android:text="@string/fragment_brain_new"
            android:textColor="@color/white"
            android:background="@drawable/fragment_brain_radiobutton_bg"/>
        <RadioButton
            android:id="@+id/rt_brain2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            style="@style/fragment_header_center"
            android:text="@string/fragment_brain_old"
            android:textColor="@color/white"
            android:background="@drawable/fragment_brain_radiobutton_bg"/>
        <RadioButton
            android:id="@+id/rt_brain3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@null"
            style="@style/fragment_header_center"
            android:text="@string/fragment_brain_best"
            android:textColor="@color/white"
            android:background="@drawable/fragment_brain_radiobutton_bg"/>
    </RadioGroup>

    <!--添加状态 -->
    <ImageView
        android:id="@+id/iv_edit_brain"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/icon_add"
        android:scaleType="centerInside"/>

</RelativeLayout>