<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_logo"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical">
                <!--昵称 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@color/white"
                        android:text="昵称:"/>
                    <EditText
                        android:id="@+id/et_nicName"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/activity_register_nickName"
                        android:background="@drawable/fragment_meet_edittext_bg"/>
                </LinearLayout>
                <!--密码 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@color/white"
                        android:text="密码:"/>
                    <EditText
                        android:id="@+id/et_psw"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:layout_marginLeft="10dp"
                        android:hint="@string/activity_register_psw"
                        android:inputType="textPassword"
                        android:background="@drawable/fragment_meet_edittext_bg"/>
                </LinearLayout>
                <!--确认密码 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@color/white"
                        android:text="确认:"/>
                    <EditText
                        android:id="@+id/et_confirepsw"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="textPassword"
                        android:hint="@string/activity_register_confirepsw"
                        android:background="@drawable/fragment_meet_edittext_bg"/>
                </LinearLayout>
                <!--生日 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:padding="12dp"
                        android:background="@color/white"
                        android:text="生日:"/>
                    <EditText
                        android:id="@+id/et_age"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:padding="10dp"
                        android:layout_marginLeft="10dp"
                        android:inputType="date"
                        android:hint="@string/activity_register_age"
                        android:background="@drawable/fragment_meet_edittext_bg"/>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">
                <!--男 -->
                <TextView
                    android:id="@+id/tv_boy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/send_button_bg"
                    android:text="@string/activity_register_boy"
                    android:textColor="@color/white"/>
                <!--女 -->
                <TextView
                    android:id="@+id/tv_girl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/send_button_bg"
                    android:text="@string/activity_register_girl"
                    android:textColor="@color/white"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_register_legal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/activity_register_legal"
                android:textColor="@color/blue"/>

            <TextView
                android:id="@+id/tv_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center_horizontal"
                android:background="@color/red"
                android:text="@string/activity_register_registerOk"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>