<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--顶部框 -->
    <include layout="@layout/fragment_me_header"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#D4D4D4"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--个人资料 -->
            <LinearLayout
                android:id="@+id/ll_user_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/fragment_me_linearLayout">

                <com.example.knightboy.doudou.view.RoundImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:src="@drawable/user" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="往事随风"
                    style="@style/fragment_me_linearLayout_text"/>

            </LinearLayout>

            <!--动态 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/fragment_me_linearLayout"
                android:orientation="vertical">

                <!--我发布的 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/collect"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_me_mystate"
                        style="@style/fragment_me_linearLayout_text"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="#a3a3a3"/>
                <!--动态提醒 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/market"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_me_stateAlarm"
                        style="@style/fragment_me_linearLayout_text"/>
                    <ImageView
                        style="@style/fragment_me_remind"
                        android:src="@drawable/icon_remind_red_bg"/>
                </LinearLayout>

            </LinearLayout>

            <!--个性设置，商城 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/fragment_me_linearLayout"
                android:orientation="vertical">

                <!--个性设置 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/share"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_me_onselfSetting"
                        style="@style/fragment_me_linearLayout_text"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="#a3a3a3"/>
                <!--表情商城 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/arounding"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_me_emoji"
                        style="@style/fragment_me_linearLayout_text"/>
                </LinearLayout>
            </LinearLayout>

            <!--分享，帮助 -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/fragment_me_linearLayout"
                android:orientation="vertical">

                <!--分享 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/correct"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_me_share"
                        style="@style/fragment_me_linearLayout_text"/>
                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginBottom="7dp"
                    android:background="#a3a3a3"/>
                <!--帮助 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/help"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fragment_me_help"
                        style="@style/fragment_me_linearLayout_text"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>