<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="40dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/icon_logo"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="vertical">
                <!--账号 -->
                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:hint="@string/activity_login_account"
                    android:background="@drawable/fragment_meet_edittext_bg"/>
                <!--密码 -->
                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:padding="10dp"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/activity_login_password"
                    android:background="@drawable/fragment_meet_edittext_bg"/>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textColor="@color/blue"
                android:textStyle="italic"
                android:text="忘记密码"
                android:layout_gravity="end"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">
                <!--注册 -->
                <TextView
                    android:id="@+id/tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_alignParentLeft="true"
                    android:background="@color/red"
                    android:text="@string/activity_login_register"
                    android:textColor="@color/white"/>
                <!--登录 -->
                <TextView
                    android:id="@+id/tv_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:layout_alignParentRight="true"
                    android:background="@color/red"
                    android:text="@string/activity_login_login"
                    android:textColor="@color/white"/>
            </RelativeLayout>

            <!--其他登录方式 -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:src="@drawable/icon_login_qq"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:src="@drawable/icon_login_weixin"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:src="@drawable/icon_login_weibo"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>